horizontal scroll issue resolved

--- a/styles/site.css
+++ b/styles/site.css
@@ -1,7 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 body {
-    margin: 0px;
-    padding: 0px;
-    width: 100vw;
+    margin: 0;
+    padding: 0;
+    /* width: 100vw; */
 }
 
 .border {
